fixed header overlap

--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 
 
-
 .body{
     background: rgb(250,250,250) !important;
-
 }
 .content{
     width: 60%;
@@ -35,9 +33,11 @@
 } */
 .fa-search{
     position: absolute;
-    width: 70%;
-    height: 45%;
-    text-indent: 45px;
+   /* width: 70%; */
+   
+    height: 100%;
+    padding-top: 2px;
+    text-indent: 40px;
 }
 .search{
     width: 100%;
@@ -87,7 +87,7 @@
 
 @media (min-width: 1025px) {
     .content{
-        margin-top: 60px;
+        padding-top: 90px;
         position: relative;
     }
    
@@ -282,7 +282,10 @@
     }
     #heart,
     #comment,
-    #share{
+    #share,
+    #heart2,
+    #comment2,
+    #share2{
         float: left;
         margin: 10px;
     }
@@ -351,7 +354,7 @@
         flex-direction: column;
         justify-content: center; 
         align-items: center;
-        margin-top: 150px;
+        padding-top: 100px;
         height: 100%;
         position: relative;
     }
@@ -427,7 +430,10 @@
     }
     #heart,
     #comment,
-    #share{
+    #share,
+    #heart2,
+    #comment2,
+    #share2{
         float: left;
         margin: 10px;
     }
